--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --config webpack.prod.config.js",
-    "dev": "webpack-dev-server --config webpack.dev.config.js --open"
+    "dev": "webpack-dev-server --config webpack.dev.config.js"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +17,7 @@
     "@babel/preset-react": "^7.0.0",
     "@svgr/webpack": "^4.1.0",
     "babel-loader": "^8.0.5",
+    "babel-plugin-styled-components": "^1.10.0",
     "clean-webpack-plugin": "^2.0.0",
     "compression-webpack-plugin": "^2.0.0",
     "css-loader": "^2.1.1",
@@ -25,6 +26,7 @@
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.5.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "react-hot-loader": "^4.8.0",
     "react-snap": "^1.23.0",
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.2.3",
