--- a/package.json
+++ b/package.json
@@ -38,9 +38,11 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
+    "intersection-observer": "^0.5.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
-    "sanitize.css": "^8.0.0"
+    "sanitize.css": "^8.0.0",
+    "styled-components": "^4.1.3"
   },
   "browserslist": [
     "last 2 versions",
