--- a/.babelrc
+++ b/.babelrc
@@ -5,12 +5,14 @@
             {
                 "useBuiltIns": "usage",
                 "modules": false,
-                // "debug": true,
+                "debug": false,
             }
         ],
         "@babel/preset-react"
     ],
     "plugins": [
-        "babel-plugin-styled-components"
+        "babel-plugin-styled-components",
+        "@babel/plugin-proposal-class-properties",
+        "@babel/plugin-syntax-dynamic-import",
     ]
 }
