--- a/package.json
+++ b/package.json
@@ -13,19 +13,26 @@
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.3.4",
+    "@babel/plugin-proposal-class-properties": "^7.3.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
     "@svgr/webpack": "^4.1.0",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
     "babel-plugin-styled-components": "^1.10.0",
     "clean-webpack-plugin": "^2.0.0",
     "compression-webpack-plugin": "^2.0.0",
     "css-loader": "^2.1.1",
     "eslint": "^5.15.1",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.12.4",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.5.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "prettier": "^1.16.4",
     "react-hot-loader": "^4.8.0",
     "react-snap": "^1.23.0",
     "style-loader": "^0.23.1",
@@ -39,6 +46,8 @@
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
     "intersection-observer": "^0.5.1",
+    "mobx": "^4.9.2",
+    "mobx-react": "^5.4.3",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "sanitize.css": "^8.0.0",
