--- a/package.json
+++ b/package.json
@@ -46,12 +46,18 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
+    "@fortawesome/fontawesome-svg-core": "^1.2.15",
+    "@fortawesome/free-brands-svg-icons": "^5.7.2",
+    "@fortawesome/free-solid-svg-icons": "^5.7.2",
+    "@fortawesome/react-fontawesome": "^0.1.3",
     "intersection-observer": "^0.5.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-helmet": "^5.2.0",
     "react-loader-spinner": "^2.3.0",
     "react-router-dom": "^4.3.1",
+    "react-scroll": "^1.7.11",
+    "react-spring": "^8.0.14",
     "sanitize.css": "^8.0.0",
     "styled-components": "^4.1.3"
   },
