--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --config webpack.prod.config.js",
-    "dev": "webpack-dev-server --config webpack.dev.config.js"
+    "build": "env-cmd .env.production webpack --config webpack.prod.config.js",
+    "dev": "env-cmd .env.development webpack-dev-server --config webpack.dev.config.js"
   },
   "keywords": [],
   "author": "",
@@ -52,7 +52,12 @@
     "@fortawesome/free-brands-svg-icons": "^5.7.2",
     "@fortawesome/free-solid-svg-icons": "^5.7.2",
     "@fortawesome/react-fontawesome": "^0.1.3",
+    "axios": "^0.18.0",
+    "env-cmd": "^8.0.2",
+    "formik": "^1.5.1",
     "intersection-observer": "^0.5.1",
+    "luxon": "^1.11.4",
+    "polished": "^3.0.3",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-helmet": "^5.2.0",
@@ -60,8 +65,10 @@
     "react-router-dom": "^4.3.1",
     "react-scroll": "^1.7.11",
     "react-spring": "^8.0.14",
+    "react-stripe-elements": "^2.0.3",
     "sanitize.css": "^8.0.0",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.1.3",
+    "yup": "^0.26.10"
   },
   "browserslist": [
     "last 2 versions",
