--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "env-cmd .env.production webpack --config webpack.prod.config.js",
+    "build:staging": "env-cmd .env.staging webpack --config webpack.prod.config.js",
+    "build:production": "env-cmd .env.production webpack --config webpack.prod.config.js",
     "dev": "env-cmd .env.development webpack-dev-server --config webpack.dev.config.js"
   },
   "keywords": [],
